Lock guest portal until system is production-ready

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-# Realm Configuration
+# Realm Configuration Template
+# Copy to .env.local and fill in your values
+
 NEXT_PUBLIC_WORLD_DOMAIN=https://realm.shalohm.co
 
 # For external agent API (optional, add auth later)
