feat(erc8004): Add Hardhat infrastructure and deployment scripts
- Add hardhat.config.cts with Base Sepolia/Mainnet networks
- Add @nomicfoundation/hardhat-toolbox and OpenZeppelin dependencies
- Create deploy-erc8004.cts deployment script
- Create test-deployment.cts for local testing
- Add .env.hardhat.example with setup instructions
- Update contracts to Solidity ^0.8.22 for UUPS compatibility
- Add UUPSUpgradeable to ReputationRegistry
- Create tsconfig.hardhat.json for Hardhat TypeScript support
- Update package.json with Hardhat scripts
- Update .gitignore for Hardhat artifacts

Contracts compile successfully and pass local deployment test.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,18 @@ clawhub-installed.json
 .env
 .DS_Store
 coverage/
+
+# Hardhat files
+cache/
+artifacts/
+typechain-types/
+coverage.json
+coverage/
+.deployments/
+
+# Hardhat ignition
+ignition/deployments/
+
+# Environment files
+.env.local
+.env.*.local
