--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "start": "node dist-server/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "compile": "hardhat compile",
+    "clean": "hardhat clean",
+    "deploy:local": "hardhat run scripts/deploy-erc8004.ts --network localhost",
+    "deploy:sepolia": "hardhat run scripts/deploy-erc8004.ts --network base-sepolia",
+    "deploy:mainnet": "hardhat run scripts/deploy-erc8004.ts --network base-mainnet",
+    "verify": "hardhat verify --network base-sepolia",
+    "node": "hardhat node"
   },
   "dependencies": {
     "@openfacilitator/sdk": "^1.0.0",
@@ -42,10 +49,16 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@openzeppelin/contracts-upgradeable": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^3.0.0",
     "@types/node": "^22.0.0",
     "@types/three": "^0.170.0",
     "@types/ws": "^8.5.13",
     "concurrently": "^9.1.0",
+    "dotenv": "^16.0.0",
+    "hardhat": "^2.22.0",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0",
     "vite": "^6.0.0",
